Update to Minecraft 1.18.2, Lib 6.2, Forge 40.0.18